--- a/HaskellBoy.cabal
+++ b/HaskellBoy.cabal
@@ -39,6 +39,9 @@ library
               , lens >= 4.16
               , vector >= 0.1.0
               , array >= 0.1.0
+              , bytestring >= 0.10.8.1
+              , binary >= 0.8.3.0
+              , gloss >= 1.0.0.0
   default-language: Haskell2010
 
 executable HaskellBoy-exe
