--- a/HaskellBoy.cabal
+++ b/HaskellBoy.cabal
@@ -42,6 +42,7 @@ library
               , bytestring >= 0.10.8.1
               , binary >= 0.8.3.0
               , gloss >= 1.0.0.0
+              , ansi-terminal >= 0.0.0.1
   default-language: Haskell2010
 
 executable HaskellBoy-exe
@@ -62,6 +63,7 @@ executable HaskellBoy-exe
               , bytestring >= 0.10.8.1
               , binary >= 0.8.3.0
               , gloss >= 1.0.0.0
+              , ansi-terminal >= 0.0.0.1
   default-language: Haskell2010
 
 test-suite HaskellBoy-test
@@ -83,4 +85,5 @@ test-suite HaskellBoy-test
               , bytestring >= 0.10.8.1
               , binary >= 0.8.3.0
               , gloss >= 1.0.0.0
+              , ansi-terminal >= 0.0.0.1
   default-language: Haskell2010
