--- a/HaskellBoy.cabal
+++ b/HaskellBoy.cabal
@@ -36,6 +36,7 @@ library
                 , Lib
                 , Memory
                 , Execution
+                , SdlFront
   other-modules:
       Paths_HaskellBoy
   hs-source-dirs:
@@ -49,7 +50,7 @@ library
               , array >= 0.1.0
               , bytestring >= 0.10.8.1
               , binary >= 0.8.3.0
-              , gloss >= 1.0.0.0
+              , gloss >= 1.11
               , ansi-terminal >= 0.0.0.1
   default-language: Haskell2010
 
