Making some progress.

--- a/HaskellBoy.cabal
+++ b/HaskellBoy.cabal
@@ -34,6 +34,7 @@ library
                 , Memory
                 , Execution
                 , Lcd
+                , BootRom
   other-modules:
       Paths_HaskellBoy
   hs-source-dirs:
