--- a/HaskellBoy.cabal
+++ b/HaskellBoy.cabal
@@ -41,15 +41,16 @@ library
   hs-source-dirs:
       src
   build-depends:
-      ansi-terminal >=0.0.0.1
-    , array >=0.1.0
-    , base >=4.7 && <5
-    , binary >=0.8.3.0
-    , bytestring >=0.10.8.1
-    , gloss >=1.11
-    , lens >=4.16
-    , stm ==2.4.5.1
-    , vector >=0.1.0
+                ansi-terminal >=0.0.0.1
+              , array >=0.1.0
+              , base >=4.7 && <5
+              , binary >=0.8.3.0
+              , bytestring >=0.10.8.1
+              , gloss >=1.11
+              , lens >=4.16
+              , stm ==2.4.5.1
+              , vector >=0.1.0
+              , split >=0.2.3.3
   default-language: Haskell2010
 
 executable HaskellBoy-exe
@@ -60,16 +61,17 @@ executable HaskellBoy-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HaskellBoy
-    , ansi-terminal >=0.0.0.1
-    , array >=0.1.0
-    , base >=4.7 && <5
-    , binary >=0.8.3.0
-    , bytestring >=0.10.8.1
-    , gloss >=1.11
-    , lens >=4.16
-    , stm ==2.4.5.1
-    , vector >=0.1.0
+                HaskellBoy
+              , ansi-terminal >=0.0.0.1
+              , array >=0.1.0
+              , base >=4.7 && <5
+              , binary >=0.8.3.0
+              , bytestring >=0.10.8.1
+              , gloss >=1.11
+              , lens >=4.16
+              , stm ==2.4.5.1
+              , vector >=0.1.0
+              , split >=0.2.3.3
   default-language: Haskell2010
 
 test-suite HaskellBoy-test
@@ -81,14 +83,15 @@ test-suite HaskellBoy-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HaskellBoy
-    , ansi-terminal >=0.0.0.1
-    , array >=0.1.0
-    , base >=4.7 && <5
-    , binary >=0.8.3.0
-    , bytestring >=0.10.8.1
-    , gloss >=1.11
-    , lens >=4.16
-    , stm ==2.4.5.1
-    , vector >=0.1.0
+                HaskellBoy
+              , ansi-terminal >=0.0.0.1
+              , array >=0.1.0
+              , base >=4.7 && <5
+              , binary >=0.8.3.0
+              , bytestring >=0.10.8.1
+              , gloss >=1.11
+              , lens >=4.16
+              , stm ==2.4.5.1
+              , vector >=0.1.0
+              , split >=0.2.3.3
   default-language: Haskell2010
